# ZERO-TWO

./: LICENSE  README.md
ZERO-TWO/: .env.prod  README.md  bot.py  pyproject.toml
ZERO-TWO/go-cq-beta7/: config.yml  device.json  session.token
ZERO-TWO/go-cq-beta7/data/leveldb/: 000211.ldb  000212.ldb  000214.ldb  000215.ldb  000219.ldb  LOG  MANIFEST-000217
ZERO-TWO/go-cq-beta7/data/voices/: 17FBCB97-C971-C3DB-8F5C-F6C9E14C1688.amr  (+12 more)
ZERO-TWO/go-cq-beta7/logs/: 2021-09-24.log.1  2021-09-24.log.2  2021-09-24.log.3  2021-09-24.log.4  2021-09-24.log.5  2021-09-24.log.6  2021-09-24.log.7  2021-09-28.log.1  2021-09-28.log.2  2021-09-28.log.3  2021-09-29.log.1  2021-09-29.log.2  2021-09-30.log.1  2021-09-30.log.2  2021-10-02.log.1  2021-10-02.log.2  2021-10-03.log.1  2021-10-03.log.2  2021-10-04.log.1  2021-10-04.log.2  2021-10-05.log.1  2021-10-05.log.2  2021-10-05.log.3  2021-10-05.log.4  2021-10-05.log.5  2021-10-10.log.1  2021-10-11.log.1  2021-10-13.log.1  2021-10-14.log.1  2021-10-15.log.1  2021-10-16.log.1  2021-10-17.log.1  2021-10-21.log.1  2021-10-21.log.2  2021-10-21.log.3  2021-10-21.log.4  2021-10-25.log.1  2021-10-25.log.2
ZERO-TWO/src/plugins/: Iron_Man.py  MiliPython.py  QQ_JZ.py  QQ_kj_fk.py  Rollcall.py  baidu_rs.py  blyy.py  bq.py  bqb.py  cd.py  chp.py  ciku.py  cikunvyou.py  cos.py  dj_ayh.py  djt.py  dsp.py  game_cx.py  get_kgmv.py  gly.py  grbk.py  hy.py  jr_jr.py  jxbz.py  lshi_jt.py  maren.py  mc_jiang.py  mt.py  objects.py  qiandao.py  random_key.py  sj_pz.py  tbao.py  tgrji.py  time.py  tuiqun.py  twqh.py  txdm.py  txiang.py  weather_tqjs.py  (+7 more)
(+3 files in other folders)
